마이페이지 하단 고정, 이미지 수정

--- a/app/src/main/res/layout/fragment_reservation_a.xml
+++ b/app/src/main/res/layout/fragment_reservation_a.xml
@@ -8,7 +8,8 @@
     android:background="@color/footerview">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:overScrollMode="never">
             <com.hotelnow.utils.NonScrollListView
                 android:id="@+id/h_list"
                 android:layout_width="match_parent"
