--- a/app/src/main/res/layout/fragment_favorite_a.xml
+++ b/app/src/main/res/layout/fragment_favorite_a.xml
@@ -8,7 +8,8 @@
     xmlns:tools="http://schemas.android.com/tools">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:overScrollMode="never">
             <com.hotelnow.utils.NonScrollListView
                 android:id="@+id/h_list"
                 android:layout_width="match_parent"
