--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -31,10 +31,11 @@
 			android:background="@color/bg_background" />
 
 
-		<android.support.v4.widget.NestedScrollView
+		<ScrollView
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
-			android:fillViewport="true">
+			android:fillViewport="true"
+			android:overScrollMode="never">
 
 			<LinearLayout
 				android:layout_width="match_parent"
@@ -64,7 +65,7 @@
 
 			</LinearLayout>
 
-		</android.support.v4.widget.NestedScrollView>
+		</ScrollView>
 	</LinearLayout>
 
 </layout>
