--- a/app/src/main/res/layout/fragment_reservation_h.xml
+++ b/app/src/main/res/layout/fragment_reservation_h.xml
@@ -8,7 +8,9 @@
     android:background="@color/footerview">
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:overScrollMode="never">
             <com.hotelnow.utils.NonScrollListView
                 android:id="@+id/h_list"
                 android:layout_width="match_parent"
