--- a/app/src/main/res/layout/activity_special_themehotel.xml
+++ b/app/src/main/res/layout/activity_special_themehotel.xml
@@ -42,6 +42,12 @@
                 android:singleLine="true"
                 android:textColor="@color/purple"
                 android:textSize="16dp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/bg_background" />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
