앱 동작 개선작업

--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -31,7 +31,8 @@
 			android:background="@color/bg_background" />
 
 
-		<ScrollView
+		<android.support.v4.widget.NestedScrollView
+			android:id="@+id/scroll"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:fillViewport="true"
@@ -65,7 +66,7 @@
 
 			</LinearLayout>
 
-		</ScrollView>
+		</android.support.v4.widget.NestedScrollView>
 	</LinearLayout>
 
 </layout>
