--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -14,10 +14,112 @@
 	android:background="@color/white">
 
 	<LinearLayout
+		android:id="@+id/ani_view"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		android:layout_below="@id/title_bar">
+
+		<android.support.design.widget.TabLayout
+			android:id="@+id/tab_layout"
+			android:layout_width="match_parent"
+			android:layout_height="36dp"
+			app:tabBackground="@drawable/tab_color_selector"
+			app:tabTextColor="@color/detail_more_color"
+			app:tabSelectedTextColor="@color/purple"
+			app:tabIndicatorColor="@android:color/transparent"
+			app:tabIndicatorHeight="0dp">
+		</android.support.design.widget.TabLayout>
+
+		<RelativeLayout
+			android:id="@+id/view_filter"
+			android:layout_width="match_parent"
+			android:layout_height="48dp"
+			android:visibility="gone">
+
+			<TextView
+				android:id="@+id/tv_date_title"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="날짜 선택"
+				android:layout_centerVertical="true"
+				android:layout_marginLeft="16dp"
+				android:textSize="13dp"
+				android:visibility="gone"
+				android:textColor="@color/termtext"/>
+
+			<RelativeLayout
+				android:id="@+id/btn_date"
+				android:layout_width="140dp"
+				android:layout_height="34dp"
+				android:layout_marginLeft="15dp"
+				android:layout_centerVertical="true"
+				android:layout_toRightOf="@+id/tv_date_title"
+				android:visibility="visible"
+				android:background="@drawable/style_edittext_gray_2border">
+
+				<ImageView
+					android:id="@+id/iv_date"
+					android:layout_width="14dp"
+					android:layout_height="14dp"
+					android:layout_marginLeft="8dp"
+					android:layout_centerVertical="true"
+					android:layout_alignParentLeft="true"
+					android:scaleType="fitXY"
+					android:background="@drawable/ico_input_calendar2"/>
+
+				<ImageView
+					android:id="@+id/iv_open2"
+					android:layout_width="14dp"
+					android:layout_height="14dp"
+					android:layout_alignParentRight="true"
+					android:layout_marginRight="6dp"
+					android:layout_centerVertical="true"
+					android:scaleType="fitXY"
+					android:background="@drawable/btn_detail_open"/>
+
+				<TextView
+					android:id="@+id/tv_date"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_toLeftOf="@+id/iv_open2"
+					android:layout_toRightOf="@+id/iv_date"
+					android:textSize="13dp"
+					android:maxLines="1"
+					android:ellipsize="end"
+					android:layout_marginLeft="8dp"
+					android:layout_centerVertical="true"
+					android:textColor="@color/purple"
+					tools:text="9/21/~9/22" />
+			</RelativeLayout>
+
+			<TextView
+				android:id="@+id/btn_cancel"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="12dp"
+				android:layout_toRightOf="@+id/btn_date"
+				android:textColor="@color/termtext"
+				android:text="@string/all_cancel"
+				android:gravity="right"
+				android:layout_centerVertical="true"
+				android:layout_alignParentRight="true"
+				android:layout_marginRight="16dp" />
+
+			<View
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:layout_alignParentBottom="true"
+				android:background="@color/back_line"/>
+		</RelativeLayout>
+	</LinearLayout>
+
+	<LinearLayout
 		android:id="@+id/title_bar"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:orientation="vertical">
+		android:orientation="vertical"
+        android:background="@color/white">
 
 		<TextView
 			android:layout_width="match_parent"
@@ -36,107 +138,11 @@
 			android:background="@color/bg_background" />
 	</LinearLayout>
 
-	<android.support.design.widget.TabLayout
-		android:id="@+id/tab_layout"
-		android:layout_width="match_parent"
-		android:layout_height="36dp"
-		android:layout_below="@id/title_bar"
-		app:tabBackground="@drawable/tab_color_selector"
-		app:tabTextColor="@color/detail_more_color"
-		app:tabSelectedTextColor="@color/purple"
-		app:tabIndicatorColor="@android:color/transparent"
-		app:tabIndicatorHeight="0dp">
-	</android.support.design.widget.TabLayout>
-
-	<RelativeLayout
-		android:id="@+id/view_filter"
-		android:layout_width="match_parent"
-		android:layout_height="48dp"
-		android:visibility="gone"
-		android:layout_below="@+id/tab_layout">
-
-		<TextView
-			android:id="@+id/tv_date_title"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:text="날짜 선택"
-			android:layout_centerVertical="true"
-			android:layout_marginLeft="16dp"
-			android:textSize="13dp"
-			android:visibility="gone"
-			android:textColor="@color/termtext"/>
-
-		<RelativeLayout
-			android:id="@+id/btn_date"
-			android:layout_width="140dp"
-			android:layout_height="34dp"
-			android:layout_marginLeft="15dp"
-			android:layout_centerVertical="true"
-			android:layout_toRightOf="@+id/tv_date_title"
-			android:visibility="visible"
-			android:background="@drawable/style_edittext_gray_2border">
-
-			<ImageView
-				android:id="@+id/iv_date"
-				android:layout_width="14dp"
-				android:layout_height="14dp"
-				android:layout_marginLeft="8dp"
-				android:layout_centerVertical="true"
-				android:layout_alignParentLeft="true"
-				android:scaleType="fitXY"
-				android:background="@drawable/ico_input_calendar2"/>
-
-			<ImageView
-				android:id="@+id/iv_open2"
-				android:layout_width="14dp"
-				android:layout_height="14dp"
-				android:layout_alignParentRight="true"
-				android:layout_marginRight="6dp"
-				android:layout_centerVertical="true"
-				android:scaleType="fitXY"
-				android:background="@drawable/btn_detail_open"/>
-
-			<TextView
-				android:id="@+id/tv_date"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_toLeftOf="@+id/iv_open2"
-				android:layout_toRightOf="@+id/iv_date"
-				android:textSize="13dp"
-				android:maxLines="1"
-				android:ellipsize="end"
-				android:layout_marginLeft="8dp"
-				android:layout_centerVertical="true"
-				android:textColor="@color/purple"
-				tools:text="9/21/~9/22" />
-		</RelativeLayout>
-
-		<TextView
-			android:id="@+id/btn_cancel"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:textSize="12dp"
-			android:layout_toRightOf="@+id/btn_date"
-			android:textColor="@color/termtext"
-			android:text="@string/all_cancel"
-			android:gravity="right"
-			android:layout_centerVertical="true"
-			android:layout_alignParentRight="true"
-			android:layout_marginRight="16dp" />
-
-		<View
-			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:layout_alignParentBottom="true"
-			android:background="@color/back_line"/>
-	</RelativeLayout>
-
 	<com.hotelnow.utils.NonSwipeableViewPager
 		android:id="@+id/view_pager"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_weight="1"
-		android:layout_below="@+id/view_filter"
-		app:layout_behavior="com.hotelnow.utils.BottomNavigationBehavior"/>
+		android:layout_below="@+id/ani_view" />
 </RelativeLayout>
 </layout>
