--- a/app/src/main/res/layout/fragment_favorite_a.xml
+++ b/app/src/main/res/layout/fragment_favorite_a.xml
@@ -7,6 +7,7 @@
     android:background="@color/footerview"
     xmlns:tools="http://schemas.android.com/tools">
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never">
