--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -11,7 +11,7 @@
 	<RelativeLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/white">
+		android:background="@color/footerview">
 
 		<LinearLayout
 			android:id="@+id/title_bar"
@@ -45,7 +45,8 @@
 			app:tabTextColor="@color/detail_more_color"
 			app:tabSelectedTextColor="@color/purple"
 			app:tabIndicatorColor="@android:color/transparent"
-			app:tabIndicatorHeight="0dp">
+			app:tabIndicatorHeight="0dp"
+			android:background="@color/white">
 		</android.support.design.widget.TabLayout>
 
 		<TextView
@@ -57,7 +58,8 @@
 			android:gravity="center_vertical|left"
 			android:paddingLeft="16dp"
 			android:layout_below="@+id/tab_layout"
-			android:text="@string/info_reservation"/>
+			android:text="@string/info_reservation"
+			android:background="@color/white"/>
 
 		<View
 			android:id="@+id/line"
