관심상품, 예약내역 스크롤시 title 제외 비노출

--- a/app/src/main/res/layout/fragment_reservation.xml
+++ b/app/src/main/res/layout/fragment_reservation.xml
@@ -9,15 +9,58 @@
 	</data>
 
 	<RelativeLayout
+		android:id="@+id/main_view"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:background="@color/footerview">
 
 		<LinearLayout
+			android:id="@+id/ani_view"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:orientation="vertical"
+			android:layout_below="@id/title_bar"
+			android:background="@color/white">
+
+			<android.support.design.widget.TabLayout
+				android:id="@+id/tab_layout"
+				android:layout_width="match_parent"
+				android:layout_height="36dp"
+				android:layout_below="@id/title_bar"
+				app:tabBackground="@drawable/tab_color_selector"
+				app:tabTextColor="@color/detail_more_color"
+				app:tabSelectedTextColor="@color/purple"
+				app:tabIndicatorColor="@android:color/transparent"
+				app:tabIndicatorHeight="0dp"
+				android:background="@color/white">
+			</android.support.design.widget.TabLayout>
+
+			<TextView
+				android:id="@+id/info"
+				android:layout_width="match_parent"
+				android:layout_height="48dp"
+				android:textSize="13dp"
+				android:textColor="@color/termtext"
+				android:gravity="center_vertical|left"
+				android:paddingLeft="16dp"
+				android:layout_below="@+id/tab_layout"
+				android:text="@string/info_reservation"
+				android:background="@color/white"/>
+
+			<View
+				android:id="@+id/line"
+				android:layout_width="match_parent"
+				android:layout_height="1dp"
+				android:layout_below="@+id/info"
+				android:background="@color/back_line"/>
+		</LinearLayout>
+
+		<LinearLayout
 			android:id="@+id/title_bar"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:orientation="vertical">
+			android:orientation="vertical"
+			android:background="@color/white">
 
 			<TextView
 				android:layout_width="match_parent"
@@ -36,43 +79,11 @@
 				android:background="@color/bg_background" />
 		</LinearLayout>
 
-		<android.support.design.widget.TabLayout
-			android:id="@+id/tab_layout"
-			android:layout_width="match_parent"
-			android:layout_height="36dp"
-			android:layout_below="@id/title_bar"
-			app:tabBackground="@drawable/tab_color_selector"
-			app:tabTextColor="@color/detail_more_color"
-			app:tabSelectedTextColor="@color/purple"
-			app:tabIndicatorColor="@android:color/transparent"
-			app:tabIndicatorHeight="0dp"
-			android:background="@color/white">
-		</android.support.design.widget.TabLayout>
-
-		<TextView
-			android:id="@+id/info"
-			android:layout_width="match_parent"
-			android:layout_height="48dp"
-			android:textSize="13dp"
-			android:textColor="@color/termtext"
-			android:gravity="center_vertical|left"
-			android:paddingLeft="16dp"
-			android:layout_below="@+id/tab_layout"
-			android:text="@string/info_reservation"
-			android:background="@color/white"/>
-
-		<View
-			android:id="@+id/line"
-			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:layout_below="@+id/info"
-			android:background="@color/back_line"/>
-
 		<com.hotelnow.utils.NonSwipeableViewPager
 			android:id="@+id/view_pager"
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
 			android:layout_weight="1"
-			android:layout_below="@+id/line" />
+			android:layout_below="@+id/ani_view" />
 	</RelativeLayout>
 </layout>
