--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -9,6 +9,7 @@
 	</data>
 
 <RelativeLayout
+	android:id="@+id/main_view"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/footerview">
