--- a/app/src/main/res/layout/activity_all_recent.xml
+++ b/app/src/main/res/layout/activity_all_recent.xml
@@ -53,35 +53,17 @@
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <ListView
+        android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
+        android:dividerHeight="0dp"
         android:layout_below="@id/toolbar"
-        android:background="@color/white">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="49dp"
-            android:textSize="13dp"
-            android:text="최근 1개월 이내 본 상품으로 최대 30개까지 확인이 가능합니다"
-            android:textColor="@color/termtext"
-            android:background="@color/back_line"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:gravity="center_vertical"/>
-
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:dividerHeight="0dp"
-            android:background="@color/white"
-            android:divider="#000000"
-            android:fadeScrollbars="true">
-        </ListView>
-
-    </LinearLayout>
+        android:background="@color/white"
+        android:divider="#000000"
+        android:overScrollMode="never"
+        android:fadeScrollbars="true">
+    </ListView>
 
     <Button
         android:id="@+id/bt_scroll"
