--- a/app/src/main/res/layout/activity_fullimage.xml
+++ b/app/src/main/res/layout/activity_fullimage.xml
@@ -68,65 +68,72 @@
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:fillViewport="true"
                     android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_marginBottom="30dp"
-                    android:layout_marginLeft="10dp">
+                    android:overScrollMode="never">
 
                     <LinearLayout
                         android:id="@+id/ll_image_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="bottom"
+                        android:layout_gravity="bottom"
                         android:orientation="horizontal"></LinearLayout>
 
                 </HorizontalScrollView>
-
-                <TextView
-                    android:id="@+id/img_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="12dp"
-                    android:maxWidth="300dp"
-                    android:layout_marginLeft="20dp"
-                    android:padding="5dp"
-                    android:singleLine="true"
-                    android:ellipsize="end"
-                    android:textColor="@color/white7"
-                    tools:text="외관사진"/>
-
-                <TextView
-                    android:id="@+id/img_title2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="10dp"
-                    android:layout_marginLeft="20dp"
-                    android:padding="5dp"
-                    android:ellipsize="end"
-                    android:layout_below="@+id/img_title"
-                    android:maxLines="2"
-                    android:textColor="@color/white7"
-                    tools:text="외관사진"/>
-
-                <TextView
-                    android:id="@+id/page"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_alignParentRight="true"
-                    android:textColor="@color/white7"
-                    android:layout_marginRight="20dp"
-                    android:padding="5dp"
-                    android:textSize="11dp"
-                    tools:text=" 3/10 + "/>
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/img_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="12dp"
+                android:maxWidth="300dp"
+                android:layout_marginLeft="20dp"
+                android:padding="5dp"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:textColor="@color/white7"
+                android:layout_above="@+id/img_title2"
+                tools:text="외관사진"/>
+
+            <TextView
+                android:id="@+id/img_title2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="10dp"
+                android:layout_marginLeft="20dp"
+                android:padding="5dp"
+                android:ellipsize="end"
+                android:layout_above="@+id/layout_info"
+                android:maxLines="2"
+                android:textColor="@color/white7"
+                tools:text="외관사진"/>
+
+            <TextView
+                android:id="@+id/page"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:layout_alignParentRight="true"
+                android:textColor="@color/white7"
+                android:layout_marginRight="20dp"
+                android:padding="5dp"
+                android:textSize="11dp"
+                android:layout_above="@+id/layout_info"
+                tools:text=" 3/10 + "/>
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_above="@id/layout_info" />
+                android:layout_marginTop="70dp"
+                android:layout_marginBottom="20dp"
+                android:layout_above="@id/img_title" />
 
         </RelativeLayout>
 
