--- a/app/src/main/res/layout/layout_detail_more_room.xml
+++ b/app/src/main/res/layout/layout_detail_more_room.xml
@@ -8,7 +8,7 @@
     android:layout_marginTop="25dp"
     android:layout_marginBottom="25dp"
     android:gravity="center"
-    android:background="@drawable/private_round"
+    android:background="@drawable/total_room_round"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
