--- a/app/src/main/res/layout/layout_detail_special.xml
+++ b/app/src/main/res/layout/layout_detail_special.xml
@@ -16,6 +16,7 @@
         android:text="@string/special_title"
         android:textColor="@color/purple"
         android:textSize="15dp"
+        android:textStyle="bold"
         android:gravity="center"/>
 
    <include layout="@layout/layout_detail_special_item" />
