--- a/app/src/main/res/layout/layout_fullimage_item.xml
+++ b/app/src/main/res/layout/layout_fullimage_item.xml
@@ -6,8 +6,6 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center"
+        android:layout_height="262dp"
         android:scaleType="fitXY" />
 </LinearLayout>
