--- a/app/src/main/res/layout/layout_reservation_hotel.xml
+++ b/app/src/main/res/layout/layout_reservation_hotel.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
     
     <TextView
@@ -35,12 +36,12 @@
         android:layout_below="@id/tv_room_sub_title"
         android:layout_marginTop="15dp">
 
-        <ImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/img_room"
             android:layout_width="134dp"
             android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:background="@color/purple"/>
+            android:scaleType="centerCrop"
+            app:riv_corner_radius="2dp" />
 
         <RelativeLayout
             android:id="@+id/ll_room_detail_info"
@@ -122,8 +123,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="81dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginRight="36dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
         android:orientation="horizontal">
 
         <TextView
@@ -172,7 +173,7 @@
             android:gravity="center"
             android:layout_toRightOf="@+id/tv_center"
             android:orientation="vertical"
-            android:layout_marginLeft="16dp">
+            android:layout_marginLeft="10dp">
 
             <TextView
                 android:layout_width="match_parent"
