--- a/app/src/main/res/layout/activity_hotdeal.xml
+++ b/app/src/main/res/layout/activity_hotdeal.xml
@@ -92,7 +92,8 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tab_layout" />
+        android:layout_below="@+id/tab_layout"
+        android:layout_marginTop="8dp"/>
 
     <RelativeLayout
         android:id="@+id/toast_layout"
