--- a/app/src/main/res/layout/layout_activity_item.xml
+++ b/app/src/main/res/layout/layout_activity_item.xml
@@ -48,7 +48,7 @@
             android:id="@+id/room_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#66000000"
+            android:background="@drawable/style_room_count_2border"
             tools:text="남은객실 4개"
             android:textSize="11dp"
             android:textColor="@color/white"
@@ -57,7 +57,10 @@
             android:layout_marginBottom="8dp"
             android:layout_marginRight="16dp"
             android:visibility="gone"
-            android:padding="3dp"/>
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"/>
     </RelativeLayout>
 
     
