--- a/app/src/main/res/layout/layout_footer.xml
+++ b/app/src/main/res/layout/layout_footer.xml
@@ -92,6 +92,8 @@
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@color/bg_background"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
                     android:layout_marginRight="7dp" />
 
                 <TextView
@@ -108,6 +110,8 @@
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="@color/bg_background"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
                     android:layout_marginRight="7dp" />
 
                 <TextView
