--- a/app/src/main/res/layout/dialog_booking_caution.xml
+++ b/app/src/main/res/layout/dialog_booking_caution.xml
@@ -70,7 +70,7 @@
                 android:text="확인"
                 android:textColor="@color/white"
                 android:textSize="13dp"
-                android:background="@color/purple" />
+                android:background="@drawable/purple_2round" />
         </LinearLayout>
     </LinearLayout>
 
