--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -48,7 +48,7 @@
                 android:text="@string/alert_confrim"
                 android:textColor="@color/white"
                 android:textSize="13dp"
-                android:background="@color/purple"/>
+                android:background="@drawable/purple_2round"/>
 
         </LinearLayout>
     </LinearLayout>
