--- a/app/src/main/res/layout/dialog_discount_alert.xml
+++ b/app/src/main/res/layout/dialog_discount_alert.xml
@@ -117,7 +117,7 @@
                     android:text="@string/alert_confrim"
                     android:textColor="@color/white"
                     android:textSize="15dp"
-                    android:background="@color/purple"
+                    android:background="@drawable/purple_2round"
                     style="?android:attr/borderlessButtonStyle"/>
 
             </LinearLayout>
