--- a/app/src/main/res/layout/dialog_fee.xml
+++ b/app/src/main/res/layout/dialog_fee.xml
@@ -48,7 +48,7 @@
                 android:text="확인"
                 android:textColor="#ffffff"
                 android:textSize="13dp"
-                android:background="@color/purple" />
+                android:background="@drawable/purple_2round" />
         </LinearLayout>
 
         <TextView
