--- a/app/src/main/res/layout/dialog_full.xml
+++ b/app/src/main/res/layout/dialog_full.xml
@@ -46,7 +46,7 @@
                     android:text="@string/alert_confrim"
                     android:textColor="@color/white"
                     android:textSize="15dp"
-                    android:background="@color/purple"
+                    android:background="@drawable/purple_2round"
                     android:layout_gravity="center"
                     style="?android:attr/borderlessButtonStyle"/>
             </LinearLayout>
