--- a/app/src/main/res/layout/dialog_recommend.xml
+++ b/app/src/main/res/layout/dialog_recommend.xml
@@ -79,7 +79,7 @@
                 android:text="@string/alert_yes"
                 android:textColor="#ffffff"
                 android:textSize="13dp"
-                android:background="@color/purple" />
+                android:background="@drawable/purple_2round" />
 
         </LinearLayout>
     </LinearLayout>
