--- a/app/src/main/res/layout/layout_reservation_ticket_item.xml
+++ b/app/src/main/res/layout/layout_reservation_ticket_item.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:textColor="@color/blacktxt"
         tools:text="A-1. [500매 한정] 1인 입장권"
-        android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:maxLines="1"
         android:ellipsize="end"
@@ -26,7 +25,7 @@
         tools:text="유효기간 : 2018-10-20 ~ 2018-12-31"
         android:maxLines="1"
         android:ellipsize="end"
-        android:layout_marginLeft="46dp"
+        android:layout_marginLeft="26dp"
         android:layout_marginBottom="14dp"
         android:textSize="14dp" />
 
@@ -34,8 +33,6 @@
         android:id="@+id/item_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/back_line"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:background="@color/back_line" />
 
 </LinearLayout>
