--- a/app/src/main/res/layout/activity_hotdeal.xml
+++ b/app/src/main/res/layout/activity_hotdeal.xml
@@ -39,6 +39,13 @@
 
     </android.support.design.widget.TabLayout>
 
+    <View
+        android:layout_below="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="@color/white"
+        android:id="@+id/magrin_view"/>
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -92,8 +99,7 @@
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tab_layout"
-        android:layout_marginTop="8dp"/>
+        android:layout_below="@+id/magrin_view" />
 
     <RelativeLayout
         android:id="@+id/toast_layout"
