--- a/app/src/main/res/layout/layout_search_recent_item.xml
+++ b/app/src/main/res/layout/layout_search_recent_item.xml
@@ -11,11 +11,9 @@
         android:layout_width="14dp"
         android:layout_height="14dp"
         android:scaleType="fitXY"
-        android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/ico_delete_gray_txt"/>
 
     <ImageView
@@ -23,28 +21,23 @@
         android:layout_alignParentLeft="true"
         android:layout_width="14dp"
         android:layout_height="14dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="12dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:scaleType="fitXY"
+        android:layout_marginBottom="17dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/ico_search_history"/>
 
     <TextView
         android:id="@+id/tv_recent_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginLeft="12dp"
-        android:layout_marginBottom="12dp"
-        android:gravity="center_vertical"
-        android:layout_centerVertical="true"
-        android:textSize="13dp"
+        android:textSize="15dp"
         android:layout_marginRight="5dp"
         android:layout_toRightOf="@+id/ico_item"
         android:layout_toLeftOf="@+id/item_del"
         android:textColor="@color/termtext"
-        tools:text="xxxxxxx"/>
+        tools:text="xxxxxxx"
+        android:layout_marginBottom="17dp"/>
 
     <TextView
         android:id="@+id/tv_recent_id"
