팝업 상단 라운드 적용 로그인 화면 수정

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
     <RelativeLayout
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -130,7 +131,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:layout_marginRight="5dp"
-                        android:background="#fae102">
+                        android:background="@drawable/style_kakao_2bg">
 
                         <ImageView
                             android:layout_width="20dp"
@@ -155,7 +156,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:layout_marginLeft="5dp"
-                        android:background="#395a9a">
+                        android:background="@drawable/style_facebook_2bg">
 
                         <ImageView
                             android:layout_width="20dp"
