--- a/app/src/main/res/layout/dialog_frontpopup.xml
+++ b/app/src/main/res/layout/dialog_frontpopup.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -12,15 +13,17 @@
 
         <RelativeLayout
             android:id="@+id/popup_bg"
-            android:background="@color/white"
+            android:background="@android:color/transparent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/popup_img"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                app:riv_corner_radius_top_right="6dp"
+                app:riv_corner_radius_top_left="6dp"/>
 
         </RelativeLayout>
     </LinearLayout>
