--- a/app/src/main/res/drawable/style_edittext_private_border.xml
+++ b/app/src/main/res/drawable/style_edittext_private_border.xml
@@ -8,6 +8,7 @@
             <stroke
                 android:width="1dp"
                 android:color="@color/white" />
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
