--- a/app/src/main/res/drawable/style_popoup_count_6.xml
+++ b/app/src/main/res/drawable/style_popoup_count_6.xml
@@ -2,11 +2,11 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="@color/purple" />
+            <solid android:color="#66000000" />
             <stroke
                 android:width="1dp"
-                android:color="@color/purple" />
-            <corners android:radius="2dp" />
+                android:color="@android:color/transparent" />
+            <corners android:radius="6dp" />
         </shape>
     </item>
 </layer-list>
