--- a/app/src/main/res/layout/layout_reservation_user_info.xml
+++ b/app/src/main/res/layout/layout_reservation_user_info.xml
@@ -142,6 +142,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:textColor="@color/termtext"
                     android:background="@drawable/style_edittext_gray_border_gray_2bg"
+                    android:textSize="14dp"
                     android:spinnerMode="dropdown" />
 
                 <EditText
@@ -249,10 +250,9 @@
                 android:text="인증번호 발송"
                 android:layout_toLeftOf="@id/ll_auth_num"
                 android:gravity="center"
-                android:padding="3dp"
                 android:textSize="12dp"
                 android:layout_marginRight="10dp"
-                android:background="@color/purple"
+                android:background="@drawable/purple_2round"
                 android:textColor="@color/white"/>
 
             <TextView
@@ -263,7 +263,6 @@
                 android:layout_toRightOf="@id/ll_auth_num"
                 android:gravity="center"
                 android:layout_marginLeft="10dp"
-                android:padding="3dp"
                 android:textSize="14dp"
                 android:background="@drawable/style_edittext_gray_2border"
                 android:textColor="@color/coupon_dis"/>
@@ -339,7 +338,7 @@
                 android:maxLength="10"
                 android:paddingLeft="5dp"
                 android:singleLine="true"
-                android:background="@drawable/style_edittext_gray_border"
+                android:background="@drawable/style_edittext_gray_2border"
                 android:textColor="@color/blacktxt"
                 android:textSize="14dp"
                 android:textStyle="bold" />
@@ -374,7 +373,7 @@
                     android:layout_weight=".34"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:textColor="@color/blacktxt"
-                    android:background="@drawable/style_edittext_gray_border"
+                    android:background="@drawable/style_edittext_gray_2border"
                     android:spinnerMode="dropdown" />
 
                 <EditText
@@ -391,7 +390,7 @@
                     android:singleLine="true"
                     android:textColor="@color/blacktxt"
                     android:textSize="14dp"
-                    android:background="@drawable/style_edittext_gray_border"
+                    android:background="@drawable/style_edittext_gray_2border"
                     android:nextFocusDown="@+id/pnum3" />
 
                 <EditText
@@ -408,7 +407,7 @@
                     android:singleLine="true"
                     android:textColor="@color/blacktxt"
                     android:textSize="14dp"
-                    android:background="@drawable/style_edittext_gray_border"
+                    android:background="@drawable/style_edittext_gray_2border"
                     android:nextFocusDown="@+id/useremail"/>
             </LinearLayout>
         </LinearLayout>
