--- a/app/src/main/res/layout/layout_detail_more_room.xml
+++ b/app/src/main/res/layout/layout_detail_more_room.xml
@@ -18,6 +18,6 @@
         android:layout_height="wrap_content"
         android:textSize="14dp"
         android:layout_marginLeft="6dp"
-        android:textColor="@color/privateview"
+        android:textColor="@color/hotdealview"
         tools:text="총 10개의 객실 전체보기"/>
 </LinearLayout>
