--- a/app/src/main/res/drawable/style_edittext_purple_border.xml
+++ b/app/src/main/res/drawable/style_edittext_purple_border.xml
@@ -6,6 +6,7 @@
             <stroke
                 android:width="1dp"
                 android:color="@color/purple" />
+            <corners android:radius="2dp" />
         </shape>
     </item>
 </layer-list>
