--- a/app/src/main/res/layout/layout_detail_activity.xml
+++ b/app/src/main/res/layout/layout_detail_activity.xml
@@ -50,6 +50,7 @@
                     tools:text="205,700"/>
 
                 <TextView
+                    android:id="@+id/tv_minwon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="13dp"
