--- a/app/src/main/res/layout/layout_horizontal.xml
+++ b/app/src/main/res/layout/layout_horizontal.xml
@@ -19,8 +19,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="7dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/title"
