--- a/app/src/main/res/layout/layout_reservation_price.xml
+++ b/app/src/main/res/layout/layout_reservation_price.xml
@@ -87,7 +87,7 @@
             android:id="@+id/tv_discount_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/privateview"
+            android:textColor="@color/redtext"
             android:textSize="15dp"
             android:layout_weight="1"
             android:gravity="right"
