--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -176,6 +176,16 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tv_room_days"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14dp"
+                        android:textColor="@color/termtext"
+                        android:letterSpacing="-0.02"
+                        android:gravity="end"
+                        tools:text="15박 / " />
+
+                    <TextView
                         android:id="@+id/tv_room_detail_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -183,13 +193,6 @@
                         android:textSize="17dp"
                         android:textStyle="bold"
                         tools:text="205,700"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/blacktxt"
-                        android:textSize="12dp"
-                        android:text="원"/>
                 </LinearLayout>
             </RelativeLayout>
         </RelativeLayout>
