--- a/app/src/main/res/layout/layout_hotel_banner_item.xml
+++ b/app/src/main/res/layout/layout_hotel_banner_item.xml
@@ -7,7 +7,7 @@
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/image_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:riv_corner_radius="5dp"
         android:scaleType="centerCrop"/>
 
