1. 상세화면 statusbar 투명하게 변경 2. 메인 서브메인 3페이지 새로고침 추가 3. 컬러 버그 수정 4. 버튼 그라데이션 제거 5.

--- a/app/src/main/res/layout/activity_activity_detail.xml
+++ b/app/src/main/res/layout/activity_activity_detail.xml
@@ -24,8 +24,7 @@
             app:titleEnabled="false"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:contentScrim="@android:color/transparent"
-            app:statusBarScrim="@color/termtext"
-            android:fitsSystemWindows="true">
+            app:statusBarScrim="@android:color/transparent">
 
             <RelativeLayout
                 android:layout_width="match_parent"
